--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,8 @@
 </body>
 </html>
     .btn.tab-active {
-      border-color: #22c55e;
+      border-color: #16a34a;
       color: #0f172a;
-      background: #ecfdf3;
+      background: #d1fae5;
+      box-shadow: 0 0 0 2px rgba(34, 197, 94, 0.15);
     }
