--- a/index.html
+++ b/index.html
@@ -931,29 +931,38 @@
       const code = hashParams.get('code') || queryParams.get('code') || queryParams.get('token');
       const accessToken = hashParams.get('access_token') || queryParams.get('access_token');
       const refreshToken = hashParams.get('refresh_token') || queryParams.get('refresh_token');
-      return { type, code, accessToken, refreshToken };
+      const error = hashParams.get('error') || queryParams.get('error');
+      const errorCode = hashParams.get('error_code') || queryParams.get('error_code');
+      return { type, code, accessToken, refreshToken, error, errorCode };
     };
 
     const handleRecoveryFromUrl = async () => {
       if (!supabase) return;
-      const { type, code, accessToken, refreshToken } = parseRecoveryParams();
-      if (type === 'recovery') {
+      const { type, code, accessToken, refreshToken, error, errorCode } = parseRecoveryParams();
+      if (error === 'access_denied' && errorCode === 'otp_expired') {
+        authStatusReset.textContent = 'This reset link is expired. Please request a new one.';
+        setAuthView('reset');
+        authModal.classList.add('active');
+        return;
+      }
+      const hasTokens = !!(accessToken && refreshToken);
+      const isRecovery = type === 'recovery';
+      if (isRecovery || hasTokens || code) {
         if (code) {
-          const { data, error } = await supabase.auth.exchangeCodeForSession(code);
-          if (error) {
-            console.warn('Recovery exchange failed', error);
+          const { data, error: exchErr } = await supabase.auth.exchangeCodeForSession(code);
+          if (exchErr) {
+            console.warn('Recovery exchange failed', exchErr);
             return;
           }
           setSessionUI(data?.session || null);
-        } else if (accessToken && refreshToken) {
-          const { data, error } = await supabase.auth.setSession({ access_token: accessToken, refresh_token: refreshToken });
-          if (error) {
-            console.warn('Recovery session set failed', error);
+        } else if (hasTokens) {
+          const { data, error: sessionErr } = await supabase.auth.setSession({ access_token: accessToken, refresh_token: refreshToken });
+          if (sessionErr) {
+            console.warn('Recovery session set failed', sessionErr);
             return;
           }
           setSessionUI(data?.session || null);
         }
-        // If we obtained/confirmed a session, show the update password view
         if (appState.session) {
           setAuthView('update');
           authModalTitle.textContent = 'Set a new password';
