Add dedicated records.html page and share records module globally

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         </div>
         <div class="cta-row" style="margin-top:12px; justify-content:flex-start;">
           <button type="button" class="btn primary" id="save-btn">Save & track history</button>
-          <a href="#" class="btn secondary" id="history-link" data-page="records">My history</a>
+          <a href="records.html" class="btn secondary" id="history-link" data-page="records">My history</a>
           <button type="button" class="btn secondary" id="signout-btn" style="display:none;">Sign out</button>
         </div>
       </div>
