Guard history table listener after records section removal

--- a/index.html
+++ b/index.html
@@ -1285,31 +1285,33 @@
       openModal(editModal);
     };
 
-    recordsTbody.addEventListener('click', (e) => {
-      const btn = e.target.closest('button[data-action]');
-      if (!btn) return;
-      const id = btn.getAttribute('data-id');
-      const action = btn.getAttribute('data-action');
-      const record = findRecordById(id);
-      if (!record) return;
-      if (action === 'view') {
-        renderViewModal(record);
-      }
-      if (action === 'edit') {
-        openEditModal(record);
-      }
-      if (action === 'delete') {
-        const confirmDelete = confirm('Are you sure you want to delete this record?');
-        if (!confirmDelete) return;
-        supabase.from('scope2_records').delete().eq('id', id).then(({ error }) => {
-          if (error) {
-            alert('Delete failed. Please try again.');
-            return;
-          }
-          refreshRecordsFromRemote();
-        });
-      }
-    });
+    if (recordsTbody) {
+      recordsTbody.addEventListener('click', (e) => {
+        const btn = e.target.closest('button[data-action]');
+        if (!btn) return;
+        const id = btn.getAttribute('data-id');
+        const action = btn.getAttribute('data-action');
+        const record = findRecordById(id);
+        if (!record) return;
+        if (action === 'view') {
+          renderViewModal(record);
+        }
+        if (action === 'edit') {
+          openEditModal(record);
+        }
+        if (action === 'delete') {
+          const confirmDelete = confirm('Are you sure you want to delete this record?');
+          if (!confirmDelete) return;
+          supabase.from('scope2_records').delete().eq('id', id).then(({ error }) => {
+            if (error) {
+              alert('Delete failed. Please try again.');
+              return;
+            }
+            refreshRecordsFromRemote();
+          });
+        }
+      });
+    }
 
     editForm.addEventListener('submit', async (e) => {
       e.preventDefault();
