--- a/records.html
+++ b/records.html
@@ -118,7 +118,20 @@
   <div class="shell">
     <section>
       <h2 style="margin:0;">Saved records</h2>
-      <div id="recordsTable"></div>
+      <table class="table" aria-label="Saved records">
+        <thead>
+          <tr>
+            <th>Period</th>
+            <th>Company</th>
+            <th>Country / Region</th>
+            <th>Electricity (kWh)</th>
+            <th>Scope 2 – Location-based (t CO₂e)</th>
+            <th>Scope 2 – Market-based (t CO₂e)</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="recordsTable"></tbody>
+      </table>
     </section>
   </div>
 
