Add slide-out record detail panel shared across pages

--- a/index.html
+++ b/index.html
@@ -257,6 +257,25 @@
       background: #d1fae5;
       box-shadow: 0 0 0 2px rgba(34, 197, 94, 0.15);
     }
+    .slide-panel {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: min(420px, 100%);
+      height: 100%;
+      background: #fff;
+      box-shadow: -8px 0 24px rgba(15, 23, 42, 0.1);
+      border-left: 1px solid #e5e7eb;
+      padding: 16px;
+      overflow-y: auto;
+      transform: translateX(100%);
+      transition: transform 0.25s ease;
+      z-index: 1000;
+    }
+    .slide-panel.active {
+      transform: translateX(0);
+    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
@@ -691,6 +710,9 @@
       </form>
     </div>
   </div>
+
+  <!-- Slide-out record detail panel -->
+  <div id="recordPanel" class="slide-panel hidden" aria-live="polite"></div>
 
   <script type="module">
     import { EMISSION_FACTORS, GLOBAL_FALLBACK } from './data/emission-factors.js';
@@ -1301,7 +1323,11 @@
         const record = findRecordById(id);
         if (!record) return;
         if (action === 'view') {
-          renderViewModal(record);
+          if (window.openRecordPanel) {
+            window.openRecordPanel(id, 'recordPanel');
+          } else {
+            renderViewModal(record);
+          }
         }
         if (action === 'edit') {
           openEditModal(record);
