--- a/records.html
+++ b/records.html
@@ -98,6 +98,23 @@
     .table th, .table td { padding: 10px; border-bottom: 1px solid #e5e7eb; text-align: left; }
     .table th { font-weight: 700; font-size: 0.95rem; color: var(--muted); }
     .table td { font-size: 0.95rem; }
+    .slide-panel {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: min(420px, 100%);
+      height: 100%;
+      background: #fff;
+      box-shadow: -8px 0 24px rgba(15, 23, 42, 0.1);
+      border-left: 1px solid #e5e7eb;
+      padding: 16px;
+      overflow-y: auto;
+      transform: translateX(100%);
+      transition: transform 0.25s ease;
+      z-index: 1000;
+    }
+    .slide-panel.active { transform: translateX(0); }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
@@ -135,10 +152,24 @@
     </section>
   </div>
 
+  <div id="recordPanel" class="slide-panel hidden" aria-live="polite"></div>
+
   <script type="module" src="./js/records.js"></script>
   <script>
     // render from shared localStorage-backed data
     window.renderRecords && window.renderRecords('recordsTable');
+    const recordsTable = document.getElementById('recordsTable');
+    if (recordsTable) {
+      recordsTable.addEventListener('click', (e) => {
+        const btn = e.target.closest('button[data-action]');
+        if (!btn) return;
+        const id = btn.getAttribute('data-id');
+        const action = btn.getAttribute('data-action');
+        if (action === 'view' && window.openRecordPanel) {
+          window.openRecordPanel(id, 'recordPanel');
+        }
+      });
+    }
   </script>
 </body>
 </html>
