Add persistent My Records link in header

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
       <div class="top-row">
         <div class="tag">CarbonWise</div>
         <span id="header-company" class="muted" style="display:none;"></span>
+        <a class="btn secondary" id="header-records" href="records.html">My Records</a>
         <button class="btn secondary" id="header-signin">Sign in</button>
       </div>
       <h1>Carbon reporting, made simple.</h1>
