--- a/index.html
+++ b/index.html
@@ -257,6 +257,14 @@
       background: #d1fae5;
       box-shadow: 0 0 0 2px rgba(34, 197, 94, 0.15);
     }
+    .company-badge {
+      background: rgba(255, 255, 255, 0.12);
+      color: #ffffff;
+      padding: 8px 12px;
+      border-radius: 999px;
+      font-weight: 700;
+      border: 1px solid rgba(255,255,255,0.25);
+    }
     .slide-panel {
       position: fixed;
       top: 0;
@@ -283,7 +291,7 @@
     <div class="shell">
       <div class="top-row">
         <div class="tag">CarbonWise</div>
-        <span id="header-company" class="muted" style="display:none;"></span>
+        <span id="header-company" class="company-badge" style="display:none;"></span>
         <a class="btn secondary" id="header-records" href="records.html">My Records</a>
         <button class="btn secondary" id="header-signin">Sign in</button>
       </div>
